--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "es6": "^0.0.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^12.0.0",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3"
   },
