--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "contributors": [],
   "scripts": {
     "dev": "nodemon app.js",
-    "test": "ava"
+    "test": "ava",
+    "start": "node app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
