--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-express-mongodb-jwt-authentication-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "license": "AGPL-version-3.0",
   "private": false,
