--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "nodemon app.js",
+    "dev": "nodemon --env-file .env app.js",
     "test": "ava",
-    "start": "node app.js"
+    "start": "node --env-file .env app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -37,8 +37,7 @@
     "jsonwebtoken": "^9.0.2",
     "marked": "^12.0.0",
     "mongoose": "^8.1.2",
-    "nodemon": "^3.0.3",
-    "dotenv": "^16.4.5"
+    "nodemon": "^3.0.3"
   },
   "devDependencies": {
     "ava": "^6.1.2",
